@@ -5,7 +5,8 @@ Changelog
 1.14.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Update quickinstaller product version when upgrading a package.
+  [jone]
 
 
 1.14.4 (2015-04-09)
